update dis.ini for automatic release

--- a/Devel-Debug-Server/dist.ini
+++ b/Devel-Debug-Server/dist.ini
@@ -1,11 +1,18 @@
-name    = Devel-Debug-ZeroMQ
-author  = Jean-Christian HASSLER <jhassler@free.fr>
+name    = Devel-Debug-Server
+author  = Jean-Christian HASSLER <hasslerjeanchristian@gmail.com>
 license = Perl_5
 copyright_holder = Jean-Christian HASSLER
 copyright_year   = 2012
+is_trial = 1
 
-version = 0.001
+[Git::NextVersion]
+first_version = 0.001       ; this is the default
+version_by_branch = 0       ; this is the default
+version_regexp  = ^v(.+)$   ; this is the default
+
+[Git::Tag]
 
 [@Basic]
+
 [AutoPrereqs]
 [Test::Portability]
