--- a/Devel-Debug-Server/.travis.yml
+++ b/Devel-Debug-Server/.travis.yml
@@ -7,6 +7,7 @@ perl:
    - 5.12
    - 5.10
 before_install:
+   - cd Devel-Debug-Server
    - export AUTOMATED_TESTING=1 HARNESS_OPTIONS=j10:c HARNESS_TIMER=1
    - git config --global user.name "TravisCI"
    - git config --global user.email $HOSTNAME":not-for-mail@travis-ci.org"
