--- a/Devel-Debug-Server/dist.ini
+++ b/Devel-Debug-Server/dist.ini
@@ -1,5 +1,5 @@
 name    = Devel-Debug-Server
-author  = Jean-Christian HASSLER <hasslerjeanchristian@gmail.com>
+author  = Jean-Christian HASSLER <hasslerjeanchristian at gmail.com>
 license = Perl_5
 copyright_holder = Jean-Christian HASSLER
 copyright_year   = 2012
@@ -18,6 +18,7 @@ version_regexp  = ^v(.+)$   ; this is the default
         file_name   = CHANGES
         wrap_column = 74
         debug       = 0
+        exclude_message = ^(forgot|typo)
  
 [GatherDir]
 exclude_filename = zeromq.vimentry
@@ -38,6 +39,7 @@ exclude_filename = zeromq.vimentry
 
 [TravisYML]
 pre_before_install = cd Devel-Debug-Server
+pre_before_install = sudo apt-get install libzmq-dev
 
 [PodWeaver]
 
